fixing width bug on mobile

--- a/css.css
+++ b/css.css
@@ -4,6 +4,15 @@
 
 }
 
+html,
+body {
+  overflow-x: hidden;
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+}
+
 /* body {
   background-color: coral;
 } */
